# esp-idf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  component.mk  idf_component.yml
.github/workflows/: build-test.yml  upload-component.yml
docs/: api-reference.md
examples/air_quality_sensor/: CMakeLists.txt  README.md
examples/air_quality_sensor/main/: CMakeLists.txt  air_quality_sensor_example.c
examples/blinds/: CMakeLists.txt  README.md
examples/contact_sensor/: CMakeLists.txt  README.md
examples/dimswitch/: CMakeLists.txt  README.md
examples/fan/: CMakeLists.txt  README.md
examples/garage_door/: CMakeLists.txt  README.md
examples/light/: CMakeLists.txt  README.md
examples/lock/: CMakeLists.txt  README.md
examples/main/: switch_example.c
examples/motion_sensor/: CMakeLists.txt  README.md
examples/power_sensor/: CMakeLists.txt  README.md
examples/speaker/: CMakeLists.txt  README.md
examples/switch/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  sdkconfig.old
examples/temperature_sensor/: CMakeLists.txt  README.md
examples/thermostat/: CMakeLists.txt  README.md
examples/tv/: CMakeLists.txt  README.md
examples/windowac/: CMakeLists.txt  README.md
include/: sinricpro.h  sinricpro_air_quality_sensor.h  sinricpro_blinds.h  sinricpro_contact_sensor.h  sinricpro_dimswitch.h  sinricpro_fan.h  sinricpro_garage_door.h  sinricpro_light.h  sinricpro_lock.h  sinricpro_motion_sensor.h  sinricpro_power_sensor.h  sinricpro_speaker.h  sinricpro_switch.h  sinricpro_temperature_sensor.h  sinricpro_thermostat.h  sinricpro_tv.h  sinricpro_windowac.h
include/sinricpro/: event_limiter.h  sinricpro.h  sinricpro_config.h  sinricpro_debug.h  sinricpro_device.h  sinricpro_device_interface.h  sinricpro_interface.h  sinricpro_namespace.h  sinricpro_queue.h  sinricpro_request.h  sinricpro_signature.h  sinricpro_switch.h  sinricpro_version.h  sinricpro_websocket.h  timestamp.h
src/: sinricpro.cpp  sinricpro_device.cpp  sinricpro_signature.cpp  sinricpro_switch.cpp  sinricpro_websocket.cpp  timestamp.cpp
src/capabilities/: air_quality_sensor.c  air_quality_sensor.h  brightness_controller.c  brightness_controller.h  channel_controller.c  channel_controller.h  color_controller.c  color_controller.h  color_temperature_controller.c  color_temperature_controller.h  contact_sensor.c  contact_sensor.h  door_controller.c  door_controller.h  equalizer_controller.c  equalizer_controller.h  input_controller.c  input_controller.h  lock_controller.c  lock_controller.h  media_controller.c  media_controller.h  mode_controller.c  mode_controller.h  motion_sensor.c  motion_sensor.h  mute_controller.c  mute_controller.h  power_level_controller.c  power_level_controller.h  power_sensor.c  power_sensor.h  range_controller.c  range_controller.h  setting_controller.h  temperature_sensor.c  temperature_sensor.h  thermostat_controller.c  thermostat_controller.h  volume_controller.c  (+1 more)
src/core/: sinricpro_core.c  sinricpro_event_limiter.c  sinricpro_event_limiter.h  sinricpro_message_queue.h  sinricpro_websocket.c
src/devices/: sinricpro_air_quality_sensor.c  sinricpro_blinds.c  sinricpro_contact_sensor.c  sinricpro_dimswitch.c  sinricpro_fan.c  sinricpro_garage_door.c  sinricpro_light.c  sinricpro_lock.c  sinricpro_motion_sensor.c  sinricpro_power_sensor.c  sinricpro_speaker.c  sinricpro_switch.c  sinricpro_temperature_sensor.c  sinricpro_thermostat.c  sinricpro_tv.c  sinricpro_windowac.c
(+37 files in other folders)
