idf_component_register(
    SRCS
        "src/core/sinricpro_core.c"
        "src/core/sinricpro_websocket.c"
        "src/core/sinricpro_signature.c"
        "src/core/sinricpro_message_queue.c"
        "src/core/sinricpro_event_limiter.c"
        "src/devices/sinricpro_switch.c"
        "src/capabilities/power_state_controller.c"
        "src/capabilities/setting_controller.c"
        "src/capabilities/push_notification.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_websocket_client
        mbedtls
        esp_event
        nvs_flash
        esp_netif
        esp_wifi
        cjson
)
