idf_component_register(
    SRCS
        "src/core/sinricpro_core.c"
        "src/core/sinricpro_websocket.c"
        "src/core/sinricpro_signature.c"
        "src/core/sinricpro_message_queue.c"
        "src/core/sinricpro_event_limiter.c"
        "src/devices/sinricpro_switch.c"
        "src/devices/sinricpro_motion_sensor.c"
        "src/devices/sinricpro_contact_sensor.c"
        "src/devices/sinricpro_temperature_sensor.c"
        "src/devices/sinricpro_air_quality_sensor.c"
        "src/devices/sinricpro_power_sensor.c"
        "src/devices/sinricpro_lock.c"
        "src/devices/sinricpro_garage_door.c"
        "src/devices/sinricpro_dimswitch.c"
        "src/devices/sinricpro_fan.c"
        "src/devices/sinricpro_blinds.c"
        "src/devices/sinricpro_light.c"
        "src/devices/sinricpro_thermostat.c"
        "src/devices/sinricpro_windowac.c"
        "src/devices/sinricpro_tv.c"
        "src/devices/sinricpro_speaker.c"
        "src/capabilities/power_state_controller.c"
        "src/capabilities/setting_controller.c"
        "src/capabilities/push_notification.c"
        "src/capabilities/motion_sensor.c"
        "src/capabilities/contact_sensor.c"
        "src/capabilities/temperature_sensor.c"
        "src/capabilities/air_quality_sensor.c"
        "src/capabilities/power_sensor.c"
        "src/capabilities/lock_controller.c"
        "src/capabilities/door_controller.c"
        "src/capabilities/power_level_controller.c"
        "src/capabilities/range_controller.c"
        "src/capabilities/brightness_controller.c"
        "src/capabilities/color_controller.c"
        "src/capabilities/color_temperature_controller.c"
        "src/capabilities/thermostat_controller.c"
        "src/capabilities/volume_controller.c"
        "src/capabilities/mute_controller.c"
        "src/capabilities/media_controller.c"
        "src/capabilities/input_controller.c"
        "src/capabilities/channel_controller.c"
        "src/capabilities/equalizer_controller.c"
        "src/capabilities/mode_controller.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_websocket_client
        mbedtls
        esp_event
        nvs_flash
        esp_netif
        esp_wifi
        cjson
)
